ind sals less than 50000

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
   out.width = "100%"
 )
 ```
-# CyChecks2 <img align="right" width="150" height="175" src="README_files/static-figures/hexsticker.png">
+# CyChecks3 <img align="right" width="150" height="175" src="README_files/static-figures/hexsticker.png">
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 
 *Overview*
 
-The goal of CyChecks2 is to allow users easy access to the publicly available Iowa State University (the Cyclones) employee salary data (their checks). 
+The goal of CyChecks3 is to allow users easy access to the publicly available Iowa State University (the Cyclones) employee salary data (their checks). 
 
 Some of the services this access could offer include:
 
@@ -30,12 +30,6 @@ Some of the services this access could offer include:
 3. Identify positions that are lacking gender diversity.
 
 *Background*
-
-In 2008 [PhDComics](http://phdcomics.com/comics/archive.php?comicid=1086) produced an interesting figure summarising US academic institution salaries:
-
-<img align="center" width="600" src="README_files/static-figures/phdcomics.gif">
-
-One might wonder - are Iowa State University (ISU) salaries consistent with this national data? Using the CyChecks2 package one can find out!
 
 The state of Iowa offers a large amount of public data at [this site](https://data.iowa.gov/). You can access the data with or without an API token, but can sign up for one [here](https://dev.socrata.com/foundry/data.iowa.gov/s3p7-wy6w). 
 Iowa state employee salaries are available at [this site](https://data.iowa.gov/State-Finances/State-of-Iowa-Salary-Book/s3p7-wy6w). **CyChecks2 provides a function to easily scrape this data for any given year** 
@@ -47,37 +41,30 @@ The data from this site does not include the employee's home department. Unfortu
 This package currently includes:
 
 1. Data from:
-    (i) Salary/department dataset for employees with the string 'prof' in their position title, currently for fiscal years 2007-2018, accessed by calling **cyd_saldept**
-    (ii) The same above dataset, but containing only the following categories:
+    (i) Salary data for all employees for fiscal years 2007-2019.
+This data is accessed by calling **salaries**
+    (ii) ISU affiliations, as received from HR.
+This data is accessed by calling **affiliation**
+    (iii) Salary/department dataset for employees with the string 'prof' in their position title, currently for fiscal years 2012-2019, containing only the following categories:
     - assoc prof
     - asst prof
     - distg prof
     - morrill prof
     - prof
     - univ prof
+This data is accessed by calling **professors**. Note this data is the result of merging salary data with affiliation data, and required a fair amount of manual manipulation due to spelling errors, inconsistencies, etc. 
 
-  There is an additional column, prof_simp, which futher simplifies these categories to assoc, asst, awarded, and simply prof. This dataset is accessed by calling **cyd_salprofs**,
-    
-2. A shiny app for visualizing data (still in the works!)
+
+2. A shiny app for visualizing data (still in the works)
 
 ## Installation
 
-You can install the developmental version CyChecks2 from [github](https://CRAN.R-project.org) with:
+You can install the developmental version CyChecks3 from [github](https://CRAN.R-project.org) with:
 
 ``` r
-devtools::install_github("lydiaPenglish/CyChecks2")
+#devtools::install_github("vanichols/CyChecks3")
 ```
 
 ## Examples
 
-
-With our package, we were able to partially recreate the PhDComics figure for the Cyclones in 2018. You can see that our data is not consistent with national averages: our football coach gets paid four times as much as the President, not twice as much. 
-
-<img align="center" width="600" src="README_files/static-figures/CyChecks-comic.png">
-
-
-
-```{r echo = FALSE, results = FALSE}
-# copy static figures to docs folder
-file.copy("./README_files", "./docs", overwrite = TRUE, recursive = TRUE)
-```
+Coming soon. 
